header is completed for web

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,257 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Custom base styles */
-body {
-  @apply bg-white text-xtb-dark;
-}
-
-/* Custom components */
-.btn-primary {
-  @apply bg-xtb-blue text-white px-6 py-3 rounded-lg hover:bg-blue-600 transition-colors;
+:root {
+  --base-black: #000;
+  --base-white: #fff;
+  --gray-5: #f4f6f8;
+  --gray-10: #ebedf0;
+  --gray-20: #dadfe3;
+  --gray-30: #bbc2c8;
+  --gray-40: #98a2a9;
+  --gray-50: #758089;
+  --gray-60: #525d66;
+  --gray-70: #3b464e;
+  --gray-80: #293037;
+  --gray-90: #161a1f;
+  --gray-100: #0f1215;
+  --green-5: #f9fefb;
+  --green-10: #e7f9f0;
+  --green-20: #cef3e0;
+  --green-30: #b6edd1;
+  --green-40: #9de7c2;
+  --green-50: #0bc466;
+  --green-60: #08aa54;
+  --green-70: #078344;
+  --green-80: #066233;
+  --green-90: #044222;
+  --green-100: #022111;
+  --red-5: #fff5f6;
+  --red-10: #feeced;
+  --red-20: #fdd8db;
+  --red-30: #fdc5c9;
+  --red-40: #fcb2b7;
+  --red-50: #f73e4a;
+  --red-60: #db2430;
+  --red-70: #b82832;
+  --red-80: #7c1f25;
+  --red-90: #531519;
+  --red-100: #2a0b0d;
+  --blue-5: #f4f9ff;
+  --blue-10: #eaf2ff;
+  --blue-20: #d4e5ff;
+  --blue-30: #bfd8ff;
+  --blue-40: #a9cbff;
+  --blue-50: #287eff;
+  --blue-60: #2169d5;
+  --blue-70: #1b54ab;
+  --blue-80: #144081;
+  --blue-90: #0e2b57;
+  --blue-100: #07162d;
+  --yellow-5: #fffcf7;
+  --yellow-10: #fef8f0;
+  --yellow-20: #fdf1e0;
+  --yellow-30: #fcead1;
+  --yellow-40: #f9d8a9;
+  --yellow-50: #f5c064;
+  --yellow-60: #d38e17;
+  --yellow-70: #a47c43;
+  --yellow-80: #7b5d32;
+  --yellow-90: #523e22;
+  --yellow-100: #2a2011;
+  --transparent-gray-1005: #0f12150d;
+  --transparent-gray-10010: #0f12151a;
+  --transparent-gray-10020: #0f121533;
+  --transparent-gray-10030: #0f12154d;
+  --transparent-gray-10040: #0f121566;
+  --transparent-gray-10050: #0f121580;
+  --transparent-gray-10060: #0f121599;
+  --transparent-gray-10070: #0f1215b3;
+  --transparent-gray-10080: #0f1215cc;
+  --transparent-gray-10090: #0f1215e6;
+  --transparent-gray-100100: #0f1215;
+  --transparent-gray-55: #f4f6f812;
+  --transparent-gray-510: #f4f6f81a;
+  --transparent-gray-520: #f4f6f833;
+  --transparent-gray-530: #f4f6f84d;
+  --transparent-gray-540: #f4f6f866;
+  --transparent-gray-550: #f4f6f880;
+  --transparent-gray-560: #f4f6f899;
+  --transparent-gray-570: #f4f6f8b3;
+  --transparent-gray-580: #f4f6f8cc;
+  --transparent-gray-590: #f4f6f8e6;
+  --transparent-gray-5100: #f4f6f8;
+  --background-strong: var(--base-white);
+  --background-weak: var(--gray-5);
+  --surface-secondary: var(--gray-10);
+  --surface-strong: var(--base-white);
+  --surface-medium: var(--gray-5);
+  --surface-weak: var(--gray-30);
+  --surface-inverted: var(--gray-100);
+  --surface-disabled: var(--gray-5);
+  --surface-selected: var(--green-10);
+  --surface-info: var(--blue-60);
+  --surface-success: var(--green-60);
+  --surface-warning: var(--yellow-60);
+  --surface-danger: var(--red-60);
+  --surface-buy: var(--green-60);
+  --surface-buy_weak: var(--green-10);
+  --surface-sell: var(--red-60);
+  --surface-sell_weak: var(--red-10);
+  --surface-info_weak: var(--blue-5);
+  --surface-success_weak: var(--green-5);
+  --surface-warning_weak: var(--yellow-5);
+  --surface-danger_weak: var(--red-5);
+  --text-strong: var(--gray-100);
+  --text-medium: var(--gray-80);
+  --text-weak: var(--gray-60);
+  --text-inverted: var(--base-white);
+  --text-disabled: var(--gray-30);
+  --text-info: var(--blue-60);
+  --text-success: var(--green-60);
+  --text-warning: var(--yellow-60);
+  --text-danger: var(--red-60);
+  --text-buy: var(--green-60);
+  --text-sell: var(--red-60);
+  --text-fixed: var(--base-white);
+  --text-primary: var(--green-60);
+  --icon-strong: var(--gray-100);
+  --icon-medium: var(--gray-80);
+  --icon-weak: var(--gray-60);
+  --icon-inverted: var(--base-white);
+  --icon-disabled: var(--gray-30);
+  --icon-info: var(--blue-60);
+  --icon-success: var(--green-60);
+  --icon-warning: var(--yellow-60);
+  --icon-danger: var(--red-60);
+  --icon-buy: var(--green-60);
+  --icon-sell: var(--red-60);
+  --icon-fixed: var(--base-white);
+  --border-strong: var(--gray-30);
+  --border-weak: var(--gray-10);
+  --border-disabled: var(--gray-20);
+  --border-selected: var(--green-60);
+  --border-info: var(--blue-60);
+  --border-success: var(--green-60);
+  --border-warning: var(--yellow-60);
+  --border-danger: var(--red-60);
+  --border-buy: var(--green-60);
+  --border-sell: var(--red-60);
+  --surface_active_primary-enabled: var(--green-60);
+  --surface_active_primary-hover: var(--green-70);
+  --surface_active_primary-pressed: var(--green-80);
+  --surface_active_primary-disabled: var(--gray-30);
+  --surface_active_primary-weak-hover: var(--green-20);
+  --surface_active_secondary-enabled: var(--gray-10);
+  --surface_active_secondary-hover: var(--gray-20);
+  --surface_active_secondary-pressed: var(--gray-30);
+  --surface_active_secondary-disabled: var(--gray-5);
+  --surface_active_strong-enabled: var(--base-white);
+  --surface_active_strong-hover: var(--gray-5);
+  --surface_active_strong-pressed: var(--gray-10);
+  --surface_active_strong-disabled: var(--gray-5);
+  --surface_active_medium-enabled: var(--gray-5);
+  --surface_active_medium-hover: var(--gray-10);
+  --surface_active_medium-pressed: var(--gray-20);
+  --surface_active_medium-disabled: var(--gray-5);
+  --surface_active_weak-enabled: var(--gray-30);
+  --surface_active_weak-hover: var(--gray-40);
+  --surface_active_weak-pressed: var(--gray-50);
+  --surface_active_weak-disabled: var(--gray-5);
+  --surface_active_inverted-enabled: var(--gray-100);
+  --surface_active_inverted-hover: var(--gray-90);
+  --surface_active_inverted-pressed: var(--gray-80);
+  --surface_active_inverted-disabled: var(--gray-30);
+  --surface_active_success-enabled: var(--green-60);
+  --surface_active_success-hover: var(--green-70);
+  --surface_active_success-pressed: var(--green-80);
+  --surface_active_success-disabled: var(--gray-30);
+  --surface_active_danger-enabled: var(--red-60);
+  --surface_active_danger-hover: var(--red-70);
+  --surface_active_danger-pressed: var(--red-80);
+  --surface_active_danger-disabled: var(--gray-30);
+  --surface_active_selected-enabled: var(--green-10);
+  --surface_active_selected-hover: var(--green-20);
+  --surface_active_selected-pressed: var(--green-30);
+  --surface_active_selected-disabled: var(--gray-5);
+  --surface_active_buy-enabled: var(--green-60);
+  --surface_active_buy-hover: var(--green-70);
+  --surface_active_buy-pressed: var(--green-80);
+  --surface_active_buy-disabled: var(--gray-30);
+  --surface_active_sell-enabled: var(--red-60);
+  --surface_active_sell-hover: var(--red-70);
+  --surface_active_sell-pressed: var(--red-80);
+  --surface_active_sell-disabled: var(--gray-30);
+  --on-surface_primary-enabled: var(--green-60);
+  --on-surface_primary-hover: var(--green-70);
+  --on-surface_primary-pressed: var(--green-80);
+  --on-surface_primary-disabled: var(--gray-30);
+  --on-surface_strong-enabled: var(--gray-100);
+  --on-surface_strong-hover: var(--gray-90);
+  --on-surface_strong-pressed: var(--gray-80);
+  --on-surface_strong-disabled: var(--gray-30);
+  --on-surface_medium-enabled: var(--gray-80);
+  --on-surface_medium-hover: var(--gray-70);
+  --on-surface_medium-pressed: var(--gray-60);
+  --on-surface_medium-disabled: var(--gray-30);
+  --on-surface_weak-enabled: var(--gray-50);
+  --on-surface_weak-hover: var(--gray-40);
+  --on-surface_weak-pressed: var(--gray-30);
+  --on-surface_weak-disabled: var(--gray-30);
+  --on-surface_inverted-enabled: var(--base-white);
+  --on-surface_inverted-hover: var(--gray-5);
+  --on-surface_inverted-pressed: var(--gray-10);
+  --on-surface_inverted-disabled: var(--gray-5);
+  --on-surface_info-enabled: var(--blue-60);
+  --on-surface_info-hover: var(--blue-70);
+  --on-surface_info-pressed: var(--blue-80);
+  --on-surface_info-disabled: var(--gray-30);
+  --on-surface_success-enabled: var(--green-60);
+  --on-surface_success-hover: var(--green-70);
+  --on-surface_success-pressed: var(--green-80);
+  --on-surface_success-disabled: var(--gray-30);
+  --on-surface_warning-enabled: var(--yellow-60);
+  --on-surface_warning-hover: var(--yellow-70);
+  --on-surface_warning-pressed: var(--yellow-80);
+  --on-surface_warning-disabled: var(--gray-30);
+  --on-surface_danger-enabled: var(--red-60);
+  --on-surface_danger-hover: var(--red-70);
+  --on-surface_danger-pressed: var(--red-80);
+  --on-surface_danger-disabled: var(--gray-30);
+  --border_active_enabled: var(--gray-30);
+  --border_active_hover: var(--gray-40);
+  --border_active_pressed: var(--gray-100);
+  --border_active_disabled: var(--gray-20);
+  --border_active_selected_enabled: var(--green-60);
+  --border_active_selected_hover: var(--green-70);
+  --border_active_selected_pressed: var(--green-80);
+  --border_active_selected_disabled: var(--gray-30);
+  --border_active_danger_enabled: var(--red-60);
+  --border_active_danger_hover: var(--red-70);
+  --border_active_danger_pressed: var(--red-80);
+  --border_active_danger_disabled: var(--gray-30);
+  --border-active-primary-enabled: var(--green-60);
+  --border-active-primary-hover: var(--green-70);
+  --decorative-amber: #ff8e54;
+  --decorative-amber_weak: #fff9f6;
+  --decorative-amethyst: #a069c6;
+  --decorative-amethyst_weak: #f6f0f9;
+  --decorative-crystal: #5db2b4;
+  --decorative-crystal_weak: #eff7f8;
+  --decorative-amaranth: #ea2e74;
+  --decorative-amaranth_weak: #fff1f6;
+  --decorative-gravel: #767478;
+  --decorative-gravel_weak: #f4f2f5;
+  --miscellaneous-overlay: var(--transparent-gray-10060);
+  --essentials-primary: var(--green-60);
+  --essentials-secondary: var(--gray-5);
+  --essentials-surface: var(--base-white);
+  --essentials-on-surface: var(--gray-100);
+  --essentials-info: var(--blue-60);
+  --essentials-success: var(--green-60);
+  --essentials-warning: var(--yellow-60);
+  --essentials-danger: var(--red-60);
+  --essentials-buy: var(--green-60);
+  --essentials-sell: var(--red-60);
+  --essentials-brand: #f8313e
 }
